--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-          repository: hackerman/hello-pong
-          tags: $(date +%y%m%d)
+          repository: hello-pong
+          tag_with_sha: true
           path: src/
+          push: false
