update: docker image push on build

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,4 @@ jobs:
           repository: hello-pong
           tag_with_sha: true
           path: src/
-          push: false
+          push: true
