--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-          repository: hello-pong
+          repository: ${{ secrets.DOCKER_USERNAME }}/hello-pong
           tag_with_sha: true
           path: src/
           push: true
