--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,6 +22,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
           repository: ${{ secrets.DOCKER_USERNAME }}/hello-pong
-          tag_with_sha: true
+          tags: latest
+          tag_with_ref: true
           path: src/
-          push: true
+          push: ${{ startsWith(github.ref, 'refs/tags/') }}
