--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: CI/CD
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build and push Docker images
+      - name: Build and push Docker image
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -26,3 +26,25 @@ jobs:
           tag_with_ref: true
           path: src/
           push: ${{ startsWith(github.ref, 'refs/tags/') }}
+
+      - name: HashiCorp - Setup Terraform
+        uses: actions/checkout@v2
+        uses: hashicorp/setup-terraform@v1.1.0
+
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt
+        continue-on-error: false
+
+      - name: Terraform Init
+        id: init
+        run: terraform init
+
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color
+        continue-on-error: false
