--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      uses: actions/checkout@v2
-      uses: hashicorp/setup-terraform@v1.1.0
+      - uses: actions/checkout@v2
+      - uses: hashicorp/setup-terraform@v1.1.0
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v1
