--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,12 +31,15 @@ jobs:
       run:
         working-directory: terraform
     steps:
-      - uses: actions/checkout@v2
-      - uses: hashicorp/setup-terraform@v1.1.0
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1.1.0
 
       - name: Terraform fmt
         id: fmt
-        run: terraform fmt
+        run: terraform fmt -check
         continue-on-error: false
 
       - name: Terraform Init
@@ -49,5 +52,5 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color
+        run: cd terraform && terraform plan -no-color
         continue-on-error: false
