--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: terraform
+        working-directory: ./terraform
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -52,5 +52,5 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: cd terraform && terraform plan -no-color
+        run: terraform plan -no-color
         continue-on-error: false
