add: eks dependencies (iam-authenticator,kubectl,aws creds)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
+      - name: aws-iam-authenticator
+        uses: prepor/action-aws-iam-authenticator@master
+        run: aws-iam-authenticator version
+
+      - name: deploy to cluster
+        uses: steebchen/kubectl@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.1.0
 
@@ -44,7 +60,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init --backend-config="access_key=$AWS_ACCESS_KEY_ID" --backend-config="secret_key=$AWS_SECRET_ACCESS_KEY"
+        run: terraform init
 
       - name: Terraform Validate
         id: validate
