--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
       - name: aws-iam-authenticator
         uses: prepor/action-aws-iam-authenticator@master
 
@@ -52,7 +59,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init --backend-config="access_key=$AWS_ACCESS_KEY_ID" --backend-config="secret_key=$AWS_SECRET_ACCESS_KEY"
+        run: terraform init
 
       - name: Terraform Validate
         id: validate
@@ -66,3 +73,23 @@ jobs:
       - name: Terraform Apply
         if: startsWith(github.ref, 'refs/tags/')
         run: terraform apply -auto-approve
+
+  destroy-k8s-cluster:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./tf
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
+      - name: Terraform Apply
+        if: startsWith(github.ref, 'refs/tags/')
+        run: terraform destroy -auto-approve
