add: cleanup s3 bucket sync to get tfstate. redefined worked nodes size and pods replication

--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -20,6 +20,14 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
 
+      - uses: jakejarvis/s3-sync-action@master
+        env:
+          AWS_S3_BUCKET: hello-pong-state-bucket
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: 'us-east-2'
+          SOURCE_DIR: 'eks'
+
       - name: Terraform Init
         id: init
         run: terraform init
