--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,11 +45,6 @@ jobs:
       - name: aws-iam-authenticator
         uses: prepor/action-aws-iam-authenticator@master
 
-      - name: deploy to cluster
-        uses: steebchen/kubectl@master
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
-
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.1.0
 
@@ -60,7 +55,7 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init
+        run: terraform init --backend-config="bucket=hello-pong-state-bucket" --backend-config="key=eks/terraform.tfstate"
 
       - name: Terraform Validate
         id: validate
@@ -72,5 +67,16 @@ jobs:
         continue-on-error: false
 
       - name: Terraform Apply
-        if: startsWith(github.ref, 'refs/tags/')
+        # if: startsWith(github.ref, 'refs/tags/')  #
         run: terraform apply -auto-approve
+
+      - name: Configure aws
+        run: aws eks --region us-east-2 update-kubeconfig --name $(terraform output cluster_name)
+
+      - name: Setup kubectl for deployment
+        uses: steebchen/kubectl@master
+        env:
+          KUBE_CONFIG_DATA: $(terraform output kubectl_config)
+        with:
+         args: apply -f k8s/
+ 
