--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,12 +71,17 @@ jobs:
         run: terraform apply -auto-approve
 
       - name: Configure aws
-        run: aws eks --region us-east-2 update-kubeconfig --name "$(terraform output cluster_name -no-color)"
+        run: |
+          echo $(terraform output kubectl_config) > ~/.kube/eks_kubectl_config
+          export KUBECONFIG=~/.kube/kubectl_config
+          echo $(terraform output cluster_name) > ~/.kube/eks_cluster_name
+          export CLUSTER_NAME=~/.kube/eks_cluster_name
+          aws eks --region us-east-2 update-kubeconfig --name $CLUSTER_NAME
 
       - name: Setup kubectl for deployment
         uses: steebchen/kubectl@master
         env:
-          KUBE_CONFIG_DATA: $(terraform output kubectl_config -no-color)
+          KUBE_CONFIG_DATA: $KUBECONFIG
         with:
          args: apply -f k8s/
  
