fix: corrected a variable file name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,15 +74,15 @@ jobs:
         run: |
           mkdir ~/.kube
           echo $(terraform output kubectl_config) > ~/.kube/eks_kubectl_config
-          export KUBECONFIG=~/.kube/kubectl_config
+          export KUBECONFIG=~/.kube/eks_kubectl_config
           echo $(terraform output cluster_name) > ~/.kube/eks_cluster_name
           export CLUSTER_NAME=~/.kube/eks_cluster_name
           aws eks --region us-east-2 update-kubeconfig --name $CLUSTER_NAME
 
-      - name: Setup kubectl for deployment
-        uses: steebchen/kubectl@master
-        env:
-          KUBE_CONFIG_DATA: $KUBECONFIG
-        with:
-         args: apply -f k8s/
+      #- name: Setup kubectl for deployment
+      #  uses: steebchen/kubectl@master
+      #  env:
+      #    KUBE_CONFIG_DATA: $KUBECONFIG
+      #  with:
+      #   args: apply -f k8s/
  
