--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,6 +77,7 @@ jobs:
           export KUBECONFIG=~/.kube/eks_kubectl_config
           echo $(terraform output cluster_name) > ~/.kube/eks_cluster_name
           export CLUSTER_NAME=~/.kube/eks_cluster_name
+          echo $CLUSTER_NAME and $KUBECONFIG
           aws eks --region us-east-2 update-kubeconfig --name $CLUSTER_NAME
 
       #- name: Setup kubectl for deployment
