--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,11 +73,12 @@ jobs:
       - name: Configure aws
         run: |
           mkdir ~/.kube
-          terraform output kubectl_config > ~/.kube/eks_kubectl_config
+          terraform output kubectl_config | base64 -w 0 > ~/.kube/eks_kubectl_config
           export KUBECONFIG=~/.kube/eks_kubectl_config
           echo $(terraform output cluster_name) | cut -d' ' -f4 > ~/.kube/eks_cluster_name
           export CLUSTER_NAME=$(cat ~/.kube/eks_cluster_name)
-          echo $CLUSTER_NAME and $KUBECONFIG
+          cat ~/.kube/eks_kubectl_config
+          terraform output kubectl_config
           aws eks --region us-east-2 update-kubeconfig --name $CLUSTER_NAME
 
       #- name: Setup kubectl for deployment
