--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,6 +47,8 @@ jobs:
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1.1.0
+        with:
+          terraform_wrapper: false
 
       - name: Terraform fmt
         id: fmt
@@ -75,7 +77,7 @@ jobs:
           mkdir ~/.kube
           terraform output kubectl_config | base64 -w 0 > ~/.kube/eks_kubectl_config
           export KUBECONFIG=~/.kube/eks_kubectl_config
-          echo $(terraform output cluster_name) | cut -d' ' -f4 > ~/.kube/eks_cluster_name
+          terraform output cluster_name > ~/.kube/eks_cluster_name
           export CLUSTER_NAME=$(cat ~/.kube/eks_cluster_name)
           cat ~/.kube/eks_kubectl_config
           terraform output kubectl_config
