--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,6 +83,8 @@ jobs:
 
       - name: Setup kubectl for deployment
         uses: steebchen/kubectl@master
+        env:
+          KUBE_CONFIG_DATA: $(base64 -w 0 $KUBECONFIG)
         with:
          args: apply -f k8s/
  
