fix: base64 file content

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,15 +76,18 @@ jobs:
         run: |
           mkdir ~/.kube
           terraform output kubectl_config > ~/.kube/eks_kubectl_config
+          terraform output kubectl_config | base64 -w 0 > ~/.kube/eks_kubectl_config64
           terraform output cluster_name > ~/.kube/eks_cluster_name
           export KUBECONFIG=~/.kube/eks_kubectl_config
+          export KUBECONFIG64=~/.kube/eks_kubectl_config64
           export CLUSTER_NAME=$(cat ~/.kube/eks_cluster_name)
+          cat $KUBECONFIG64
           aws eks --region us-east-2 update-kubeconfig --name $CLUSTER_NAME
 
       - name: Setup kubectl for deployment
         uses: steebchen/kubectl@master
         env:
-          KUBE_CONFIG_DATA: $(cat $KUBECONFIG | base64 -w 0)
+          KUBE_CONFIG_DATA: $KUBECONFIG64
         with:
          args: apply -f k8s/
  
