update: github action set-env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,9 +79,8 @@ jobs:
           terraform output kubectl_config | base64 -w 0 > ~/.kube/eks_kubectl_config64
           terraform output cluster_name > ~/.kube/eks_cluster_name
           export KUBECONFIG=~/.kube/eks_kubectl_config
-          export KUBECONFIG64=~/.kube/eks_kubectl_config64
+          echo "::set-env name=KUBECONFIG64::$(cat ~/.kube/eks_kubectl_config64)"
           export CLUSTER_NAME=$(cat ~/.kube/eks_cluster_name)
-          cat $KUBECONFIG64
           aws eks --region us-east-2 update-kubeconfig --name $CLUSTER_NAME
 
       - name: Setup kubectl for deployment
