--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,7 +79,7 @@ jobs:
           terraform output kubectl_config | base64 -w 0 > ~/.kube/eks_kubectl_config64
           terraform output cluster_name > ~/.kube/eks_cluster_name
           export KUBECONFIG=~/.kube/eks_kubectl_config
-          echo "::set-env name=KUBECONFIG64::$(cat ~/.kube/eks_kubectl_config64)"
+          echo "::set-env name=KUBECONFIG64::~/.kube/eks_kubectl_config64"
           export CLUSTER_NAME=$(cat ~/.kube/eks_cluster_name)
           aws eks --region us-east-2 update-kubeconfig --name $CLUSTER_NAME
 
