fix: rollout corrected deployment recall

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,5 +87,5 @@ jobs:
         run: kubectl --kubeconfig ~/.kube/config apply -f ../k8s/
 
       - name: Rollout k8s Deployment (update pods)
-        run: kubectl --kubeconfig ~/.kube/config rollout -f ../k8s/deployment.yml
+        run: kubectl --kubeconfig ~/.kube/config rollout restart deployment.apps/hello-pong-deployment
  
