--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  destroy-k8s-cluster:
+  destroy-aws-infra:
     runs-on: ubuntu-latest
     defaults:
       run:
