--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           push: ${{ startsWith(github.ref, 'refs/tags/') }}
 
 
-  provision-k8s-cluster:
+  create-infra-deploy-k8s:
     runs-on: ubuntu-latest
     defaults:
       run:
